@@ -670,64 +670,76 @@ void ScoreView::modifyElement(Element* el)
 
 void Score::cmdAddTie()
       {
-      Note* note = getSelectedNote();
-      if (!note || note->tieFor()) {
-            if (!note)
-                  printf("cmdAddTie: no note selected\n");
-            else
-                  printf("cmdAddTie: has already tie? noteFor: %p\n", note->tieFor());
+      QList<Note*> noteList;
+      Element* el = selection().element();
+      if (el && el->type() == NOTE)
+            noteList.append(static_cast<Note*>(el));
+      else if (el && el->type() == STEM) {
+            Chord* chord = static_cast<Stem*>(el)->chord();
+            noteList = chord->notes();
+            }
+      else
+            noteList = selection().noteList();
+      if (noteList.isEmpty()) {
+            printf("no notes selected\n");
             return;
             }
-      Chord* chord  = note->chord();
-      if (noteEntryMode()) {
-            if (_is.cr() == 0) {
-                  if(debugMode)
-                        printf("cmdAddTie: no pos\n");
-                  expandVoice();
-                  }
-            startCmd();
-            Note* n = addPitch(note->pitch(), false);
-            if (n) {
-                  n->setLine(note->line());
-                  n->setTpc(note->tpc());
-                  Tie* tie = new Tie(this);
-                  tie->setStartNote(note);
-                  tie->setEndNote(n);
-                  tie->setTrack(note->track());
-                  note->setTieFor(tie);
-                  n->setTieBack(tie);
-                  undoAddElement(tie);
-                  nextInputPos(n->chord(), false);
-                  }
-            endCmd();
-            return;
-            }
-      ChordRest* el = nextChordRest(chord);
-      if (el == 0 || el->type() != CHORD) {
-            if (debugMode)
-                  printf("addTie: no next chord found\n");
-            return;
-            }
-      Note* note2 = 0;
-      foreach(Note* n, static_cast<Chord*>(el)->notes()) {
-            if (n->pitch() == note->pitch()) {
-                  note2 = n;
-                  break;
-                  }
-            }
-      if (note2 == 0) {
-            if (debugMode)
-                  printf("addTie: next note for tie not found\n");
-            return;
-            }
+
       startCmd();
-      Tie* tie = new Tie(this);
-      tie->setStartNote(note);
-      tie->setEndNote(note2);
-      tie->setTrack(note->track());
-      undoAddElement(tie);
-      layoutAll = true;
-      select(note2, SELECT_SINGLE, 0);
+      foreach (Note* note, noteList) {
+            if (note->tieFor()) {
+                  printf("cmdAddTie: has already tie? noteFor: %p\n", note->tieFor());
+                  continue;
+                  }
+            Chord* chord  = note->chord();
+            if (noteEntryMode()) {
+                  if (_is.cr() == 0) {
+                        if(debugMode)
+                              printf("cmdAddTie: no pos\n");
+                        expandVoice();
+                        }
+                  Note* n = addPitch(note->pitch(), false);
+                  if (n) {
+                        n->setLine(note->line());
+                        n->setTpc(note->tpc());
+                        Tie* tie = new Tie(this);
+                        tie->setStartNote(note);
+                        tie->setEndNote(n);
+                        tie->setTrack(note->track());
+                        note->setTieFor(tie);
+                        n->setTieBack(tie);
+                        undoAddElement(tie);
+                        nextInputPos(n->chord(), false);
+                        }
+                  layoutAll = true;
+                  continue;
+                  }
+            ChordRest* el = nextChordRest(chord);
+            if (el == 0 || el->type() != CHORD) {
+                  if (debugMode)
+                        printf("addTie: no next chord found\n");
+                  continue;
+                  }
+            Note* note2 = 0;
+            foreach(Note* n, static_cast<Chord*>(el)->notes()) {
+                  if (n->pitch() == note->pitch()) {
+                        note2 = n;
+                        break;
+                        }
+                  }
+            if (note2 == 0) {
+                  if (debugMode)
+                        printf("addTie: next note for tie not found\n");
+                  continue;
+                  }
+            Tie* tie = new Tie(this);
+            tie->setStartNote(note);
+            tie->setEndNote(note2);
+            tie->setTrack(note->track());
+            undoAddElement(tie);
+            layoutAll = true;
+            select(note2, SELECT_SINGLE, 0);
+            }
       endCmd();
       }
 
