@@ -1553,6 +1553,9 @@ static void loadScores(const QStringList& argv)
                                           if (i == c)
                                                 currentScoreView = view;
                                           }
+                                    else{
+                                          delete score;
+                                          }
                                     }
                               }
                               break;
@@ -1600,14 +1603,6 @@ static void loadScores(const QStringList& argv)
                   }
             }
 
-      if (!scoreCreated && preferences.sessionStart != EMPTY_SESSION
-         && preferences.sessionStart != NEW_SESSION) {
-            // start with empty score:
-            Score* score = new Score(defaultStyle);
-            score->fileInfo()->setFile(mscore->createDefaultName());
-            score->setCreated(true);
-            mscore->appendScore(score);
-            }
       if (mscore->noScore())
             currentScoreView = -1;
       mscore->setCurrentView(0, currentScoreView);
